[package]
edition = "2021"
name = "rift_rumble_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", default-features = false}
reqwest = {version = "0.11.10"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.17.0", features = ["full"]}
tokio-stream = {version = "0.1.8"}
uuid = {version = "0.4", features = ["serde", "v4"]}
warp = "0.2"
